[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main"]
margin_right = 467.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main"]
margin_left = 471.0
margin_right = 553.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main/VBoxContainer"]
margin_right = 82.0
margin_bottom = 250.0
size_flags_vertical = 3

[node name="New" type="Button" parent="CanvasLayer/Main/VBoxContainer"]
margin_top = 254.0
margin_right = 82.0
margin_bottom = 274.0
text = "New Game"

[node name="Continue" type="Button" parent="CanvasLayer/Main/VBoxContainer"]
margin_top = 278.0
margin_right = 82.0
margin_bottom = 298.0
text = "Continue"

[node name="Options" type="Button" parent="CanvasLayer/Main/VBoxContainer"]
margin_top = 302.0
margin_right = 82.0
margin_bottom = 322.0
text = "Options"

[node name="Exit" type="Button" parent="CanvasLayer/Main/VBoxContainer"]
margin_top = 326.0
margin_right = 82.0
margin_bottom = 346.0
text = "Exit"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Main/VBoxContainer"]
margin_top = 350.0
margin_right = 82.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Main"]
margin_left = 557.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
[connection signal="pressed" from="CanvasLayer/Main/VBoxContainer/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
